# dao-plug-template-sc

./: Cargo.toml  README.md  deploy-devnet.interaction.json  erdpy.data-storage.json  mxpy.data-storage.json
interaction/: snippets.sh
meta/: Cargo.toml
meta/src/: main.rs
src/: lib.rs
tests/: setup.rs
wasm/: Cargo.toml
wasm/src/: lib.rs
