[package]
name = "plug"
version = "0.0.1"
authors = ["Micha Vie <micha@peerme.io>", "PeerMe <hello@peerme.io>"]
edition = "2018"
publish = false

[lib]
path = "src/lib.rs"

[dev-dependencies]
num-bigint = "0.4.2"

[dependencies.multiversx-sc]
version = "0.39.2"

[dev-dependencies.multiversx-sc-scenario]
version = "0.39.2"
