[package]
name = "plug-wasm"
version = "0.0.1"
edition = "2018"
publish = false
authors = ["Micha Vie <micha@peerme.io>", "PeerMe <hello@peerme.io>"]

[lib]
crate-type = [ "cdylib",]

[workspace]
members = [ ".",]

[dev-dependencies]

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"

[dependencies.plug]
path = ".."

[dependencies.multiversx-sc-wasm-adapter]
version = "0.39.2"
